--- a/css/theme.css
+++ b/css/theme.css
@@ -2,7 +2,7 @@
 Software: Decorator Blog Theme
 Author: Alan Museljic "Uloga"
 Author URI: http://uloga.net
-Twitter: https://twitter.com/alanmuseljic
+Twitter: https://twitter.com/_uloga
 Facebook: https://facebook.com/webrebelz
 Under GPL License: http://www.gnu.org/licenses/gpl.html
 */
